Number input examples

--- a/examples/BlazorWasmExamples/Pages/Index.razor
+++ b/examples/BlazorWasmExamples/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Blazor & Bootstrap components</h1>
 
-Welcome to your new app.
+Blazor components based on Bootstrap 4 
 
-<SurveyPrompt Title="How is Blazor working for you?" />
