--- a/examples/BlazorWasmExamples/Shared/NavMenu.razor
+++ b/examples/BlazorWasmExamples/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Number input
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SelectExamples">
+                <span class="oi oi-list" aria-hidden="true"></span> Select 
+            </NavLink>
+        </li>
 
 
     </ul>
