--- a/test/BlazorServerSideForDebug/Pages/Counter.razor
+++ b/test/BlazorServerSideForDebug/Pages/Counter.razor
@@ -60,15 +60,11 @@
 
         <div class="card">
 
-            <div class="card-body">
-
-                <BBComponents.BbListGroup TValue="Currency" ItemsSource="_currencies" >
-                    <ItemTemplate Context="item">
-                        <span>@item.Code</span><span class="float-right">@item.CodeNumeric</span>
-                    </ItemTemplate>
-                </BBComponents.BbListGroup>
-
-            </div>
+            <BBComponents.BbListGroup TValue="Currency" ItemsSource="_currencies" HtmlClass="list-group-flush">
+                <ItemTemplate Context="item">
+                    <span>@item.Code</span><span class="float-right">@item.CodeNumeric</span>
+                </ItemTemplate>
+            </BBComponents.BbListGroup>
 
         </div>
 
