--- a/examples/BlazorWasmExamples/Shared/NavMenu.razor
+++ b/examples/BlazorWasmExamples/Shared/NavMenu.razor
@@ -24,7 +24,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="SelectExamples">
-                <span class="oi oi-list" aria-hidden="true"></span> Select 
+                <span class="oi oi-list" aria-hidden="true"></span> Select
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ListGroupExamples">
+                <span class="oi oi-list" aria-hidden="true"></span> List group
             </NavLink>
         </li>
 
