Change name of Html Class and Style properties

--- a/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
@@ -16,7 +16,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               ClassExpression="form-control"></BbNumberInput>
+                               HtmlClass="form-control"></BbNumberInput>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               ClassExpression="form-control"
+                               HtmlClass="form-control"
                                Digits="0"></BbNumberInput>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               ClassExpression="form-control"
+                               HtmlClass="form-control"
                                Digits="3"></BbNumberInput>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               ClassExpression="form-control"
+                               HtmlClass ="form-control"
                                GroupSeparator=""></BbNumberInput>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               ClassExpression="form-control"
+                               HtmlClass ="form-control"
                                GroupSeparator="." 
                                DecimalSeparator=","></BbNumberInput>
             </div>
