--- a/examples/BlazorWasmExamples/Pages/SelectExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/SelectExamples.razor
@@ -19,7 +19,7 @@
                           ValueName="Id"
                           TextName="Code"
                           @bind-Value="_selectedValue"
-                          ClassExpression="form-control form-control-sm"></BbSelect>
+                          HtmlClass="form-control form-control-sm"></BbSelect>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
                           ValueName="Id"
                           TextName="Title"
                           @bind-Value="_selectedValue"
-                          ClassExpression="form-control form-control-sm"></BbSelect>
+                          HtmlClass="form-control form-control-sm"></BbSelect>
             </div>
         </div>
 
@@ -46,7 +46,7 @@
                           TextName="Title"
                           @bind-Value="_selectedValue"
                           AddNotSelectedItem="true"
-                          ClassExpression="form-control form-control-sm"></BbSelect>
+                          HtmlClass="form-control form-control-sm"></BbSelect>
             </div>
         </div>
 
