--- a/src/BBComponents/BbNumberInput.razor
+++ b/src/BBComponents/BbNumberInput.razor
@@ -1,8 +1,8 @@
 ﻿@typeparam TValue
 
 <input id="@Id" 
-       class="bb-number-input @ClassExpression" 
-       style="@StyleExpression"
+       class="bb-number-input @HtmlClass" 
+       style="@HtmlStyle"
        readonly=@IsReadOnly
        disabled=@IsDisabled
        value="@_stringValue" 
