--- a/src/BBComponents/BbSelect.razor
+++ b/src/BBComponents/BbSelect.razor
@@ -2,8 +2,8 @@
 
 <select id="@Id"
         name="@Name"
-        class="bb-select @ClassExpression"
-        style="@StyleExpression"
+        class="bb-select @HtmlClass"
+        style="@HtmlStyle"
         readonly=@IsReadOnly
         disabled=@IsDisabled
         value="@_value"
