Alert hub component
Component to show alerts

--- a/test/BlazorServerSideForDebug/Pages/FetchData.razor
+++ b/test/BlazorServerSideForDebug/Pages/FetchData.razor
@@ -1,46 +1,22 @@
 ﻿@page "/fetchdata"
 
-@using BlazorServerSideForDebug.Data
-@inject WeatherForecastService ForecastService
+<div class="row">
 
-<h1>Weather forecast</h1>
+    <div class="col-sm-6">
 
-<p>This component demonstrates fetching data from a service.</p>
+        <div class="btn-group btn-group-sm">
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+            <button class="btn btn-outline-success" @onclick="OnAlertSucessAddClick">Alert success</button>
+            <button class="btn btn-outline-danger" @onclick="OnAlertDangerAddClick">Alert danger</button>
 
-@code {
-    private WeatherForecast[] forecasts;
+            <button class="btn btn-outline-info" @onclick="OnAlertDismissableClick">Alert dismissable</button>
 
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-    }
-}
+
+        </div>
+
+    </div>
+
+</div>
+
+<BBComponents.BbAlertHub></BBComponents.BbAlertHub>
+
