--- a/examples/BlazorWasmExamples/Shared/NavMenu.razor
+++ b/examples/BlazorWasmExamples/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list" aria-hidden="true"></span> List group
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AlertExamples">
+                <span class="oi oi-list" aria-hidden="true"></span> Alerts
+            </NavLink>
+        </li>
 
 
     </ul>
