DatePicker - start development

--- a/test/BlazorServerSideForDebug/Pages/_Host.cshtml
+++ b/test/BlazorServerSideForDebug/Pages/_Host.cshtml
@@ -13,6 +13,7 @@
     <title>BlazorServerSideForDebug</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/BBComponents/styles.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
