Refactoring: All components moved to folder Components

--- a/examples/BlazorWasmExamples/Pages/ListGroupExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/ListGroupExamples.razor
@@ -13,11 +13,11 @@
 
         <div class="card">
 
-            <BBComponents.BbListGroup TValue="Currency" ItemsSource="_currencies" HtmlClass="list-group-flush">
+            <BbListGroup TValue="Currency" ItemsSource="_currencies" HtmlClass="list-group-flush">
                 <ItemTemplate Context="item">
                     <span>@item.Code</span><span class="float-right">@item.CodeNumeric</span>
                 </ItemTemplate>
-            </BBComponents.BbListGroup>
+            </BbListGroup>
 
         </div>
 
