--- a/test/BlazorServerSideForDebug/Pages/_Host.cshtml
+++ b/test/BlazorServerSideForDebug/Pages/_Host.cshtml
@@ -13,8 +13,8 @@
     <title>BlazorServerSideForDebug</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="_content/BBComponents/styles.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="~/css/bb-components.css" rel="stylesheet" />
 </head>
 <body>
     <app>
