--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -1,14 +1,48 @@
 ﻿
-<div class="input-group bb-date-picker">
-    <input class="form-control" type="text" />
-    <div class="input-group-append">
-        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" @onclick="OnOpenClick"></button>
+<div class="input-group input-group-sm bb-date-picker">
+    <input class="form-control" type="text" value="@_stringValue" @onchange="(e=> OnStringValueChange(e))"/>
+    <div class="input-group-append ">
+        <button type="button" class="btn btn-outline-secondary" @onclick="OnOpenClick">&#x25BC</button>
     </div>
 
     @if (_isOpen)
     {
-        <div class="bb-dropdown">
-            <h3>Date picker drop down</h3>
+        <div class="bb-calendar bb-dropdown">
+            
+            <div class="bb-calendar__header text-primary">
+
+                <span class="bb-calendar__button float-left text-info" @onclick="OnPreviousMonthClick">&lt;</span>
+
+                <span>@_monthName</span>&nbsp;
+                <span>@_year</span>
+
+                <span class="bb-calendar__button float-right text-info" @onclick="OnNextMonthClick">&gt;</span>
+
+            </div>
+
+            <div class="bb-calendar__week-days">
+                @if (_dayNames != null)
+                {
+                    @foreach(var dayName in _dayNames)
+                    {
+                        <div class="bb-calendar__week-day text-primary">@dayName</div>
+                    }
+                }
+            </div>
+
+            @if (_weeks != null)
+            {
+                @foreach(var week in _weeks)
+                {
+                    <div>
+                        @foreach(var day in week)
+                        {
+                            <div class="bb-calendar__day @day.ModificatorClass" @onclick="(e=>OnDayClick(e, day))">@day.Day</div>
+                        }
+                    </div>
+                }
+            }
+
         </div>
     }
 
