--- a/test/BlazorServerSideForDebug/Pages/Counter.razor
+++ b/test/BlazorServerSideForDebug/Pages/Counter.razor
@@ -1,6 +1,7 @@
 ﻿@page "/counter"
 
 @using BlazorServerSideForDebug.Data
+@inject BBComponents.Services.IAlertService AlertService
 
 <h1>Number input</h1>
 
@@ -16,6 +17,30 @@
 
 <hr />
 
+
+<div class="col-sm-6">
+
+    <BbSelect TValue="int"
+              ItemsSource="_currencies"
+              TextName="Code"
+              ValueName="Id"
+              @bind-Value="_selectedCurrencyId"
+              Changed="OnSelectChange"
+              HtmlClass="form-control"></BbSelect>
+
+
+    <div class="form-group form-group-sm row">
+        <label class="col-sm-4">Currency Id</label>
+        <div class="col-sm-8">
+            @_selectedCurrencyId
+        </div>
+    </div>
+
+</div>
+
+
+<hr />
+
 <div class="row">
 
     <div class="col-sm-6">
@@ -24,14 +49,14 @@
 
             <div class="card-body">
 
-                <BbNavs TValue="int" 
-                                     ItemsSource="_tabsSource" 
-                                     ValueName="Item1" 
-                                     TextName="Item2" 
-                                     NavStyle="BBComponents.Enums.NavStyles.Tabs"
-                                     @bind-Value="_activeTab"></BbNavs>
+                <BbNavs TValue="int"
+                        ItemsSource="_tabsSource"
+                        ValueName="Item1"
+                        TextName="Item2"
+                        NavStyle="BBComponents.Enums.NavStyles.Tabs"
+                        @bind-Value="_activeTab"></BbNavs>
 
-                @if(_activeTab == 0)
+                @if (_activeTab == 0)
                 {
                     <div>
                         <h1>Main content</h1>
@@ -52,7 +77,7 @@
 
 </div>
 
-<hr/>
+<hr />
 
 <div class="row">
 
@@ -72,15 +97,21 @@
 
 </div>
 
+<BbAlertHub></BbAlertHub>
+
+
 @code {
 
     private decimal _number;
     private int _numberInt;
+    private int _selectedCurrencyId;
 
     private List<Tuple<int, string>> _tabsSource;
     private int _activeTab = 0;
 
     private List<Currency> _currencies;
+
+
 
     protected override void OnInitialized()
     {
@@ -89,6 +120,11 @@
         _tabsSource.Add(new Tuple<int, string>(1, "Other"));
 
         _currencies = Currency.SampleData().ToList();
+    }
+
+    private void OnSelectChange()
+    {
+        AlertService.Add($"Currency changed {_selectedCurrencyId}", BBComponents.Enums.BootstrapColors.Info);
     }
 
 }
