Size of confirm. Bind select to enums.

--- a/src/BBComponents/Components/BbConfirm.razor
+++ b/src/BBComponents/Components/BbConfirm.razor
@@ -8,7 +8,7 @@
      aria-labelledby="staticBackdropLabel" 
      aria-modal="true">
 
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog @SizeClass" role="document">
         <div class="modal-content">
 
             @* Header *@
