--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -5,8 +5,25 @@
 <div class="row">
 
     <div class="col-sm-6">
-        <BBComponents.Components.BbDatePicker></BBComponents.Components.BbDatePicker>
+        <BbDatePicker Format="MM/dd/yyyy" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday"></BbDatePicker>
     </div>
 
 </div>
+
+<div class="row" style="margin-top: 10px;">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="MM/dd/yyyy" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday" Size="BBComponents.Enums.BootstrapElementSizes.Sm"></BbDatePicker>
+    </div>
+
+</div>
+
+<div class="row" style="margin-top: 10px;">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="MM/dd/yyyy" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday" Size="BBComponents.Enums.BootstrapElementSizes.Lg"></BbDatePicker>
+    </div>
+
+</div>
+
 
