--- a/examples/BlazorWasmExamples/Shared/NavMenu.razor
+++ b/examples/BlazorWasmExamples/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-list" aria-hidden="true"></span> Alerts
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DatePickerExamples">
+                <i class="fa fa-2x fa-calendar-day" aria-hidden="true"></i> &nbsp;&nbsp;<span>Date picker</span> 
+            </NavLink>
+        </li>
 
 
     </ul>
