Bug fixed: alert not show in wasm example

--- a/examples/BlazorWasmExamples/Pages/AlertExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/AlertExamples.razor
@@ -13,7 +13,7 @@
             <button class="btn btn-outline-success" @onclick="OnAlertSuccessAddClick">Alert success</button>
             <button class="btn btn-outline-danger" @onclick="OnAlertDangerAddClick">Alert danger</button>
 
-            <button class="btn btn-outline-info" @onclick="OnAlertDismissableClick">Alert dismissable</button>
+            <button class="btn btn-outline-info" @onclick="OnAlertNonDismissableClick">Alert non dismissable</button>
 
 
         </div>
@@ -22,4 +22,4 @@
 
 </div>
 
-<BBComponents.BbAlertHub></BBComponents.BbAlertHub>
+<BbAlertHub></BbAlertHub>
