--- a/test/BlazorServerSideForDebug/Pages/Counter.razor
+++ b/test/BlazorServerSideForDebug/Pages/Counter.razor
@@ -85,11 +85,26 @@
 
         <div class="card">
 
-            <BbListGroup TValue="Currency" ItemsSource="_currencies" HtmlClass="list-group-flush">
+            <BbListGroup TValue="Currency" 
+                         ItemsSource="_currencies" 
+                         HtmlClass="list-group-flush" 
+                         ItemClick="OnItemClick">
+
                 <ItemTemplate Context="item">
                     <span>@item.Code</span><span class="float-right">@item.CodeNumeric</span>
                 </ItemTemplate>
+
             </BbListGroup>
+
+        </div>
+
+    </div>
+
+    <div class="col-sm-6">
+
+        <div class="card">
+
+            <span>@_selectedItem</span>
 
         </div>
 
@@ -110,6 +125,7 @@
     private int _activeTab = 0;
 
     private List<Currency> _currencies;
+    private Currency _selectedItem;
 
 
 
@@ -120,6 +136,11 @@
         _tabsSource.Add(new Tuple<int, string>(1, "Other"));
 
         _currencies = Currency.SampleData().ToList();
+    }
+
+    private void OnItemClick(Currency item)
+    {
+        _selectedItem = item;
     }
 
     private void OnSelectChange()
