--- a/src/BBComponents/Components/BbComboBox.razor
+++ b/src/BBComponents/Components/BbComboBox.razor
@@ -9,8 +9,12 @@
 
         <div class="input-group-append ">
 
-            <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">&#x25BC;</span>
-            <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">x</span>
+            <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">
+                <i class="fa fa-chevron-down"></i>
+            </span>
+            <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">
+                <i class="fa fa-times"></i>
+            </span>
 
         </div>
 
