Combobox: set size

--- a/src/BBComponents/Components/BbComboBox.razor
+++ b/src/BBComponents/Components/BbComboBox.razor
@@ -1,6 +1,6 @@
 ﻿@typeparam TValue
 
-    <div class="input-group  bb-combo-box">
+    <div class="input-group @SizeClass bb-combo-box">
 
         <input class="form-control" type="text" value="@_inputValue" 
                @onchange="(e=> OnInputValueChange(e))" 
