--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -8,7 +8,8 @@
        <BbComboBox TValue="int" 
                    ItemsSource="_products" 
                    TextName="Title" 
-                   ValueName="Id" 
+                   ValueName="Id"
+                   Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                    IsDeletedName="IsDeleted" 
                    @bind-Value="_selectedId"></BbComboBox>
     </div>
