--- a/src/BBComponents/Components/BbComboBox.razor
+++ b/src/BBComponents/Components/BbComboBox.razor
@@ -1,36 +1,39 @@
 ﻿@typeparam TValue
 
-    <div class="input-group @SizeClass bb-combo-box">
+<div class="input-group @SizeClass bb-combo-box">
 
-        <input class="form-control" type="text" value="@_inputValue" 
-               @onchange="(e=> OnInputValueChange(e))" 
-               @oninput="(e=>OnInput(e))" 
-               @onkeypress="(e=>OnInputKeyPress(e))" />
+    <input class="form-control" type="text" value="@_inputValue"
+           @onchange="(e=> OnInputValueChange(e))"
+           @oninput="(e=>OnInput(e))"
+           @onkeypress="(e=>OnInputKeyPress(e))" />
 
-        <div class="input-group-append ">
+    <div class="input-group-append ">
 
-            <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">
-                <i class="fa fa-chevron-down"></i>
-            </span>
-            <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">
-                <i class="fa fa-times"></i>
-            </span>
+        <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">
+            <i class="fa fa-chevron-down"></i>
+        </span>
+        @if (!IsValueSelected){
 
-        </div>
-
-        @if (_isOpen)
-        {
-            <div class="bb-combo-box bb-dropdown" style="top:@TopDrowdown">
-
-                <ul class="bb-combo-box__items">
-                    @foreach (var item in SourceFiltered)
-                    {
-                        <li class="bb-combo-box__item @(item.IsDeleted ? "bb-combo-box__item_deleted":"")" @onclick="(e=>OnItemClick(e, item))">@item.Text</li>
-                    }
-
-                </ul>
-
-            </div>
-        }
+        <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">
+            <i class="fa fa-times"></i>
+        </span>
+            }
 
     </div>
+
+    @if (_isOpen)
+        {
+    <div class="bb-combo-box bb-dropdown" style="top:@TopDrowdown">
+
+        <ul class="bb-combo-box__items">
+            @foreach (var item in SourceFiltered)
+                    {
+            <li class="bb-combo-box__item @(item.IsDeleted ? "bb-combo-box__item_deleted":"")" @onclick="(e=>OnItemClick(e, item))">@item.Text</li>
+                    }
+
+        </ul>
+
+    </div>
+        }
+
+</div>
