Add Changed event for DatePicker and NumberInput

--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -52,3 +52,18 @@
 
 </div>
 
+<div class="row">
+
+    <div class="col-sm-6">
+
+        <BbSelect TValue="int"
+                  ItemsSource="_itemsPerPageSource"
+                  TextName="Item2"
+                  ValueName="Item1"
+                  @bind-Value="_itemsPerPage"></BbSelect>
+
+
+    </div>
+
+</div>
+
