Change icon in DatePicker

--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -2,8 +2,9 @@
 <div class="input-group @SizeClass bb-date-picker">
     <input class="form-control" type="text" value="@_stringValue" @onchange="(e=> OnStringValueChange(e))"/>
     <div class="input-group-append ">
-        @*<button type="button" class="btn btn-outline-secondary" @onclick="OnOpenClick">&#x25BC</button>*@
-        <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">&#x25BC</span>
+        <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">
+            <i class="fa fa-chevron-down"></i>
+        </span>
     </div>
 
     @if (_isOpen)
