--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -11,7 +11,8 @@
                    ValueName="Id"
                    Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                    IsDeletedName="IsDeleted" 
-                   @bind-Value="_selectedId"></BbComboBox>
+                   @bind-Value="_selectedId" 
+                   Changed="OnProductChanged"></BbComboBox>
     </div>
 
     <div class="col-sm-6">
@@ -20,6 +21,15 @@
 
             <label class="col-form-label col-sm-4">Selected value:</label>
             <div class="col-sm-8">@_selectedId</div>
+
+
+        </div>
+
+        <div class="form-group form-row">
+
+            <label class="col-form-label col-sm-4">Selected text:</label>
+            <div class="col-sm-8">@_selectedText</div>
+
 
         </div>
 
@@ -30,13 +40,16 @@
 <div class="row">
 
     <div class="col-sm-6">
+
         <BbComboBox TValue="int"
                     ItemsSource="_products"
                     TextName="Title"
                     ValueName="Id"
                     Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                     IsDeletedName="IsDeleted"
-                    @bind-Value="_selectedId2"></BbComboBox>
+                    @bind-Value="_selectedId2" 
+                    Changed="OnProduct2Changed"></BbComboBox>
+
     </div>
 
     <div class="col-sm-6">
@@ -47,6 +60,14 @@
             <div class="col-sm-8">@_selectedId2</div>
 
         </div>
+
+        <div class="form-group form-row">
+
+            <label class="col-form-label col-sm-4">Selected value:</label>
+            <div class="col-sm-8">@_selectedText2</div>
+
+        </div>
+
 
     </div>
 
