ComboBox TextChanged CallBack

--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -12,7 +12,7 @@
                    Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                    IsDeletedName="IsDeleted" 
                    @bind-Value="_selectedId" 
-                   Changed="OnProductChanged"></BbComboBox>
+                   @bind-Text="_selectedText"></BbComboBox>
     </div>
 
     <div class="col-sm-6">
@@ -48,7 +48,7 @@
                     Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                     IsDeletedName="IsDeleted"
                     @bind-Value="_selectedId2" 
-                    Changed="OnProduct2Changed"></BbComboBox>
+                    @bind-Text="_selectedText2"></BbComboBox>
 
     </div>
 
