--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -10,7 +10,8 @@
                    TextName="Title" 
                    ValueName="Id"
                    Size="BBComponents.Enums.BootstrapElementSizes.Sm"
-                   IsDeletedName="IsDeleted" 
+                   IsDeletedName="IsDeleted"
+                   Tooltip="Select product"
                    @bind-Value="_selectedId" 
                    @bind-Text="_selectedText"></BbComboBox>
     </div>
