--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -1,6 +1,10 @@
 ﻿
 <div class="input-group @SizeClass bb-date-picker">
-    <input class="form-control" type="text" value="@_stringValue" @onchange="(e=> OnStringValueChange(e))"/>
+    <input class="form-control" type="text"
+           data-toggle="tooltip" 
+           title="@Tooltip"
+           value="@_stringValue" 
+           @onchange="(e=> OnStringValueChange(e))"/>
     <div class="input-group-append ">
         <span class="input-group-text" style="cursor:pointer;" @onclick="OnOpenClick">
             <i class="fa fa-chevron-down"></i>
