Set Today in DatePicker if binded value is empty

--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -26,4 +26,19 @@
 
 </div>
 
+<div class="row" style="margin-top: 10px;">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="MM/dd/yyyy" 
+                      Size="BBComponents.Enums.BootstrapElementSizes.Sm" @bind-Value="_lastDay"></BbDatePicker>
+    </div>
+
+    <div class="col-sm-6">
+
+        <p>@_lastDay</p>
+
+    </div>
+
+</div>
+
 
