--- a/test/BlazorServerSideForDebug/Pages/_Host.cshtml
+++ b/test/BlazorServerSideForDebug/Pages/_Host.cshtml
@@ -16,7 +16,9 @@
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
 
     <link href="css/site.css" rel="stylesheet" />
-    <link href="~/css/bb-components.css" rel="stylesheet" />
+    <link href="/_content/ZyuDev.BBComponents/styles.css" rel="stylesheet" />
+
+
 </head>
 <body>
     <app>
