--- a/examples/BlazorWasmExamples/Shared/NavMenu.razor
+++ b/examples/BlazorWasmExamples/Shared/NavMenu.razor
@@ -34,12 +34,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="AlertExamples">
-                <span class="oi oi-list" aria-hidden="true"></span> Alerts
+                <span class="fa  fa-exclamation-triangle" aria-hidden="true" style="font-size:18px;"></span> &nbsp;&nbsp; Alerts
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="DatePickerExamples">
-                <i class="fa fa-2x fa-calendar-day" aria-hidden="true"></i> &nbsp;&nbsp;<span>Date picker</span> 
+                <i class="fa  fa-calendar-day" aria-hidden="true" style="font-size:18px;"></i> &nbsp;&nbsp;<span>Date picker</span> 
             </NavLink>
         </li>
 
