--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -41,4 +41,13 @@
 
 </div>
 
+<div class="row" style="margin-top: 10px;">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="MM/dd/yyyy" 
+                      FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday" 
+                      Size="BBComponents.Enums.BootstrapElementSizes.Sm" DropdownPosition="fixed" DropdownTopValue="100" DropdownLeftValue="200"></BbDatePicker>
+    </div>
+
+</div>
 
