--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="input-group @SizeClass bb-date-picker">
+<div class="input-group @SizeClass bb-date-picker @HtmlClass" style="@HtmlStyle">
     <input class="form-control" type="text"
            data-toggle="tooltip" 
            title="@Tooltip"
@@ -13,7 +13,7 @@
 
     @if (_isOpen)
     {
-        <div class="bb-calendar bb-dropdown" style="top:@TopDrowdown">
+        <div class="bb-calendar bb-dropdown" style="top:@DropdownTop;left:@DropdownLeft;position:@DropdownPosition">
             
             <div class="bb-calendar__header text-primary">
 
