--- a/examples/BlazorWasmExamples/Shared/MainLayout.razor
+++ b/examples/BlazorWasmExamples/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://github.com/ZyuDev/BBComponents" target="_blank" class="ml-md-auto">About</a>
+        <a href="https://github.com/HubCloud-io/BBComponents" target="_blank" class="ml-md-auto">About</a>
     </div>
 
     <div class="content px-4">
