--- a/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
@@ -4,7 +4,6 @@
 
 <hr />
 
-<h4 class="text-primary">Basic usage</h4>
 
 <div class="row">
 
@@ -48,7 +47,7 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               HtmlClass ="form-control"
+                               HtmlClass="form-control"
                                GroupSeparator=""></BbNumberInput>
             </div>
         </div>
@@ -59,24 +58,112 @@
             <div class="col-sm-8">
                 <BbNumberInput TValue="decimal"
                                @bind-Value="_number"
-                               HtmlClass ="form-control"
-                               GroupSeparator="." 
+                               HtmlClass="form-control"
+                               GroupSeparator="."
                                DecimalSeparator=","></BbNumberInput>
             </div>
         </div>
+
+        @* Int number *@
+        <div class="form-group form-row">
+            <label class="col-sm-4 col-form-label-sm">Int number</label>
+            <div class="col-sm-8">
+                <BbNumberInput TValue="int"
+                               @bind-Value="_intNumber"
+                               HtmlClass="form-control"></BbNumberInput>
+            </div>
+        </div>
+
 
     </div>
 
     <div class="col-sm-6">
 
         <div class="form-group form-row">
-            <label class="col-sm-4 col-form-label-sm">Input result</label>
+            <label class="col-sm-4 col-form-label-sm">Decimal number</label>
             <div class="col-sm-8">
                 @_number
             </div>
         </div>
 
+        <div class="form-group form-row">
+            <label class="col-sm-4 col-form-label-sm">Int number</label>
+            <div class="col-sm-8">
+                @_intNumber
+            </div>
+        </div>
+
     </div>
+
+</div>
+
+<hr />
+
+<div class="row">
+
+    <div class="col-sm-12 text-info">Razor</div>
+
+    <div class="col-sm-12">
+        <pre>
+        <code data-language="html">
+
+                &lt!-- Default settings -->
+                &lt;BbNumberInput TValue="decimal"
+                                @@bind-Value="_number"
+                                HtmlClass="form-control">&lt;/BbNumberInput>
+
+                &lt!-- No digits -->
+                &lt;BbNumberInput TValue="decimal"
+                                @@bind-Value="_number"
+                                HtmlClass="form-control"
+                                Digits="0">&lt;/BbNumberInput>
+
+                &lt!-- 3 Digits -->
+                &lt;BbNumberInput TValue="decimal"
+                                @@bind-Value="_number"
+                                HtmlClass="form-control"
+                                Digits="3">&lt;/BbNumberInput>
+
+                &lt!-- No group separator -->
+                &lt;BbNumberInput TValue="decimal"
+                                @@bind-Value="_number"
+                                HtmlClass="form-control"
+                                GroupSeparator="">&lt;/BbNumberInput>
+
+                &lt!-- Custom group and decimal separator -->
+                &lt;BbNumberInput TValue="decimal"
+                                @@bind-Value="_number"
+                                HtmlClass="form-control"
+                                GroupSeparator="."
+                                DecimalSeparator=",">&lt;/BbNumberInput>
+
+                &lt!-- Int number -->
+                &lt;BbNumberInput TValue="int"
+                               @@bind-Value="_intNumber"
+                               HtmlClass="form-control">&lt;/BbNumberInput>
+
+
+            </code>
+         </pre>
+
+    </div>
+
+    <div class="col-sm-12 text-info">C#</div>
+
+    <div class="col-sm-12">
+
+        <pre>
+        <code data-language="csharp">
+                public partial class NumberInputExamples: ComponentBase
+                {
+                    private decimal _number = 10000.234M;
+                    private int _intNumber = 3;
+                }
+            </code>
+        </pre>
+    </div>
+
+
 
 </div>
 
