--- a/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/NumberInputExamples.razor
@@ -107,37 +107,37 @@
         <pre>
         <code data-language="html">
 
-                &lt!-- Default settings -->
+                &lt;!-- Default settings -->
                 &lt;BbNumberInput TValue="decimal"
                                 @@bind-Value="_number"
                                 HtmlClass="form-control">&lt;/BbNumberInput>
 
-                &lt!-- No digits -->
+                &lt;!-- No digits -->
                 &lt;BbNumberInput TValue="decimal"
                                 @@bind-Value="_number"
                                 HtmlClass="form-control"
                                 Digits="0">&lt;/BbNumberInput>
 
-                &lt!-- 3 Digits -->
+                &lt;!-- 3 Digits -->
                 &lt;BbNumberInput TValue="decimal"
                                 @@bind-Value="_number"
                                 HtmlClass="form-control"
                                 Digits="3">&lt;/BbNumberInput>
 
-                &lt!-- No group separator -->
+                &lt;!-- No group separator -->
                 &lt;BbNumberInput TValue="decimal"
                                 @@bind-Value="_number"
                                 HtmlClass="form-control"
                                 GroupSeparator="">&lt;/BbNumberInput>
 
-                &lt!-- Custom group and decimal separator -->
+                &lt;!-- Custom group and decimal separator -->
                 &lt;BbNumberInput TValue="decimal"
                                 @@bind-Value="_number"
                                 HtmlClass="form-control"
                                 GroupSeparator="."
                                 DecimalSeparator=",">&lt;/BbNumberInput>
 
-                &lt!-- Int number -->
+                &lt;!-- Int number -->
                 &lt;BbNumberInput TValue="int"
                                @@bind-Value="_intNumber"
                                HtmlClass="form-control">&lt;/BbNumberInput>
